Dev: bugs with overflow

--- a/plurid/css/plurid.css
+++ b/plurid/css/plurid.css
@@ -277,15 +277,11 @@ plurid-container {
   bottom: 0;
   right: 0;
   left: 0;
-  overflow: hidden;
-  -moz-perspective: 1000px;
-  -ms-perspective: 1000px;
-  -webkit-perspective: 1000px;
-  perspective: 1000px; }
+  overflow: hidden; }
 
 plurid-roots {
-  position: absolute;
   height: 100%;
+  position: absolute;
   -moz-transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
   -ms-transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
   -webkit-transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
@@ -356,11 +352,11 @@ plurid-link:hover {
   color: #eaebeb; }
 
 plurid-shadow {
-  position: absolute;
-  width: 100%;
-  height: 500px;
   background-color: #0c0d0d;
+  height: 500px;
+  position: absolute;
   opacity: 0.25;
+  width: 100%;
   -moz-transform-origin: 100% 100%;
   -ms-transform-origin: 100% 100%;
   -webkit-transform-origin: 100% 100%;
@@ -376,6 +372,14 @@ plurid-shadow {
 
 plurid-space {
   display: block;
+  -moz-transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
+  -ms-transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
+  -webkit-transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
+  transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
   perspective: 1000px;
   perspective-origin: center 300px; }
 
